# satmad

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zenodo.json
.circleci/: config.yml
.github/workflows/: workflow.yml
binder/: requirements.txt
docs/: Makefile  about.md  about.rst  changelog.md  changelog.rst  conf.py  doc_index.md  doc_index.rst  examples.rst  getting_started.md  getting_started.rst  index.html  index.md  index.rst  references.md  references.rst  requirements.txt  tutorials.md  tutorials.rst  user_guide.rst
docs (copy)/: conf.py
docs (copy)/propagation/: classical_orb_elems.rst  force_models.rst
docs/coordinates/: frames.md  frames.rst  trajectory.md  trajectory.rst
docs/core/: celestial_bodies.md  celestial_bodies.rst  celestial_constants.rst  celestial_parameters.rst  central_body.md  central_body.rst  ground_location.md  ground_location.rst
docs/examples/: satmad_first_steps.ipynb  sso_analysis.ipynb
docs/frames/: index.rst
docs/math/: index.rst
docs/propagation/: classical_orb_elems.md  force_models.md  numerical_propagation.md  numerical_propagation.rst  propagators.md  propagators.rst  sgp4_propagator.md  sgp4_propagator.rst  tle.md  tle.rst  tle_storage.md  tle_storage.rst
docs/satmad/: index.rst
docs/satmod/: index.rst
docs/tutorials/: numerical_prop_1.ipynb  numerical_prop_2.ipynb  satmad_first_steps.ipynb  sso_analysis.ipynb
docs/utils/: discrete_time_events.md  discrete_time_events.rst  index.rst  interpolators.md  interpolators.rst  occultations.md  timeinterval.md  timeinterval.rst
licenses/: README.rst
satmad/: __init__.py
satmad/coordinates/: __init__.py  frames.py  j2000.py  planetary_rot_elems.py  teme.py  tirs.py  trajectory.py
satmad/core/: __init__.py  celestial_bodies.py  celestial_bodies_lib.py  celestial_body.py  celestial_constants.py  celestial_parameters.py  central_body.py  ground_location.py  occultation.py
satmad/core/tests/: __init__.py  (+3 more)
satmad/example_subpkg/: setup_package.py
satmad/frames/: __init__.py  setup_package.py  teme.py
satmad/math/: __init__.py  interpolators.py
satmad/plots/: __init__.py  basic_plots.py  plotstyling.py
satmad/propagation/: __init__.py  base_propagator.py  classical_orb_elems.py  force_models.py  numerical_propagators.py  sgp4_propagator.py  tle.py  tle_storage.py
satmad/tests/: __init__.py  common_test_funcs.py
satmad/utils/: __init__.py  discrete_time_events.py  discrete_time_intervals.py  interpolators.py  timeinterval.py
satmod/example_subpkg/: setup_package.py
(+25 files in other folders)
