[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "satmad"
author = "Egemen Imre"
description-file = "README.rst"
home-page = "https://satmad.readthedocs.io/"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

