[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "satmad"
author = "Egemen Imre"
description-file = "README.md"
home-page = "https://github.com/egemenimre/satmad/"
keywords = "satellite,satellite design,mission analysis,aerospace,engineering,astrodynamics,orbits,orbital mechanics"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

requires = [
    "astropy",
    "jplephem",
    "matplotlib",
    "numpy",
    "portion",
    "pyerfa",
    "scipy",
    "sgp4",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
doc = ["sphinx"]

[tool.flit.metadata.urls]
Documentation = "https://satmad.readthedocs.io/en/latest/"