[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
requires = numpy
zip_safe = False
install_requires = numpy>=1.16
python_requires = >=3.6

[flake8]
ignore = E203, E266, E501, W503
exclude = temp
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88